--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="style.css">
+		<link
+		rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+	  />
     <title>Home Page</title>
 </head>
 <body>
@@ -25,11 +29,11 @@
 	<div id="intro-sub">
 	<pre><b> Hello i am <b>Oniyide Faith</b></b><br><b>I'm a software engineer</b></pre>
 	<span id="circle"></span>
-	<div><img src="./images/img.png" alt="profile" id="img"></div>
+	<div><img src="./images/img.png" alt="profile" id="img" class="animate__bounceInRight"></div>
 </div><br>
 	<p id="box1">FullStack Developer / A.I enthusiast</p>
-	<article id="about">
-			<h1 id="topic1">Me Myself And I</h1>
+	<article id="about"> 
+			<h1 id="topic1">About Me</h1>
 			<div id="flex">
 				<div id="card">
 					<p id="hashtag"><i>#jobexperience</i></p>
@@ -39,7 +43,7 @@
 						<li>Intern at Moor tech</li>
 					</ol>
 					<pre><span >you could visit my <a href="https://www.linkedin.com/in/oniyide-f-6148b420a/" id="connect">linkedin</a> or just <a href="#contact" id="connect">Contact me</a></span><br>
-						<p><i id="hashtag">#Goals</i><br> Since beginning my journey at alt school africa,<br> I’ve made it my Goal to always make the best use<br> of the resources given at alt school africa <br> to collaborate with my pairs and to solve tech related problems</p>	<br>
+						<p><i id="hashtag">#Goals</i><br> Since beginning my journey at alt school africa,<br> I’ve made it my Goal to always make the best use<br> of the resources given at alt school africa <br> to collaborate with my peers and to solve tech related problems</p>	<br>
 				</div>
 				<div id="card0">
 					<p><i id="hashtag">#hobby</i></p>
